--- a/README
+++ b/README
@@ -16,4 +16,4 @@ A game for GMTK Jam 2020!
 
 ## Can I?
 
-Maybe! The game, including art and music, are licensed under CC-BY 4.0.
+Maybe! The game is licensed under GNU GPLv3, and the art and music are under CC-BY 4.0.
