Make changes to README

--- a/README
+++ b/README
@@ -7,7 +7,9 @@ A game for GMTK Jam 2020!
 ## Who?
 
 @JohnGabrielUK: he typed stuff!
+
 @D4yz_Ag0: he drew stuff!
+
 @MayaComposer: she composed stuff!
 
 ## Why?
@@ -16,4 +18,4 @@ A game for GMTK Jam 2020!
 
 ## Can I?
 
-Maybe! The game is licensed under GNU GPLv3, and the art and music are under CC-BY 4.0.
+Maybe! The game is licensed under GNU GPLv3, and the art is licensed under CC-BY 4.0. However, the music is not available for public use.
